<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string-array name="preferences_scale_bar_unit_values">
		<item>Imperial</item>
		<item>Metric</item>
	</string-array>

	<string-array name="preferences_text_scale_values">
		<item>tiny</item>
		<item>small</item>
		<item>normal</item>
		<item>large</item>
		<item>huge</item>
	</string-array>

	<string name="application_name">AdvancedMapViewer</string>
	<string name="cancel">Cancel</string>
	<string name="error">Error</string>
	<string name="error_last_location_unknown">The last location is unknown</string>
	<string name="file_invalid">The selected file is invalid.</string>
	<string name="file_select">Please select a file.</string>
	<string name="file_size_byte">byte</string>
	<string name="file_size_bytes">bytes</string>
	<string name="file_size_kb">kB</string>
	<string name="file_size_mb">MB</string>
	<string name="file_size_gb">GB</string>
	<string name="go_to_position">Go to position</string>
	<string name="info_map_file_area">Area</string>
	<string name="info_map_file_comment">Comment</string>
	<string name="info_map_file_created_by">Created by</string>
	<string name="info_map_file_date">Date</string>
	<string name="info_map_file_debug">Debug information</string>
	<string name="info_map_file_debug_no">not included</string>
	<string name="info_map_file_debug_yes">included</string>
	<string name="info_map_file_language_preference">Language preference</string>
	<string name="info_map_file_name">File</string>
	<string name="info_map_file_size">File size</string>
	<string name="info_map_file_start_position">Start position</string>
	<string name="info_map_file_start_zoom_level">Start zoom level</string>
	<string name="info_map_file_version">Version</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="menu_info">Info</string>
	<string name="menu_info_map_file">Map file properties</string>
	<string name="menu_info_about">About this software</string>
	<string name="menu_mapfile">Map file</string>
	<string name="menu_position">Position</string>
	<string name="menu_position_enter_coordinates">Enter coordinates</string>
	<string name="menu_position_last_known">Last known location</string>
	<string name="menu_position_map_file_center">Map file center</string>
	<string name="menu_position_my_location_enable">Show my location</string>
	<string name="menu_position_my_location_disable">Remove my location</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_render_theme">Render theme</string>
	<string name="menu_render_theme_osmarender">Osmarender</string>
	<string name="menu_render_theme_select_file">Select XML file …</string>
	<string name="menu_screenshot">Screenshot</string>
	<string name="menu_screenshot_jpeg">JPEG (lossy)</string>
	<string name="menu_screenshot_png">PNG (lossless)</string>
	<string name="no_location_provider_available">No location source available</string>
	<string name="ok">OK</string>
	<string name="preferences_debug">Debug settings</string>
	<string name="preferences_general">General settings</string>
	<string name="preferences_cache_persistence">Cache persistence</string>
	<string name="preferences_cache_persistence_desc">Keep cached images on exit</string>
	<string name="preferences_cache_size">External storage</string>
	<string name="preferences_cache_size_desc">Adjust the size of the cache</string>
	<string name="preferences_cache_size_value">%.1f MB</string>
	<string name="preferences_fullscreen">Full screen mode</string>
	<string name="preferences_fullscreen_desc">Hide the status bar</string>
	<string name="preferences_map">Map settings</string>
	<string name="preferences_move_speed">Move speed</string>
	<string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
	<string name="preferences_move_speed_value">%d %% move speed</string>
	<string name="preferences_scale_bar_unit">Scale bar unit</string>
	<string name="preferences_scale_bar_unit_desc">Select the unit for the map scale bar</string>
	<string name="preferences_show_fps_counter">Frame rate</string>
	<string name="preferences_show_fps_counter_desc">Enable frames per second counter</string>
	<string name="preferences_show_scale_bar">Map scale bar</string>
	<string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
	<string name="preferences_show_tile_coordinates">Tile coordinates</string>
	<string name="preferences_show_tile_coordinates_desc">Show coordinates on tiles</string>
	<string name="preferences_show_tile_frames">Tile boundaries</string>
	<string name="preferences_show_tile_frames_desc">Draw tile boundaries</string>
	<string name="preferences_show_water_tiles">Water tiles</string>
	<string name="preferences_show_water_tiles_desc">Highlight tiles which have the water flag set</string>
	<string name="preferences_text_scale">Font size</string>
	<string name="preferences_text_scale_desc">Select the text size of map labels</string>
	<string name="preferences_wake_lock">Stay awake</string>
	<string name="preferences_wake_lock_desc">Stop the screen from dimming</string>
	<string name="snap_to_location_enabled">Snap to position is activated</string>
	<string name="snap_to_location_disabled">Snap to position is disabled</string>
	<string name="unit_symbol_kilometer">&#160;km</string>
	<string name="unit_symbol_meter">&#160;m</string>
	<string name="zoomLevel">Zoom level</string>
</resources>