<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/menu_preferences">
	<PreferenceCategory android:title="@string/preferences_map">
		<CheckBoxPreference android:title="@string/preferences_show_scale_bar" android:summary="@string/preferences_show_scale_bar_desc"
			android:key="showScaleBar" />
		<ListPreference android:title="@string/preferences_scale_bar_unit" android:summary="@string/preferences_scale_bar_unit_desc"
			android:entryValues="@array/preferences_scale_bar_unit_keys" android:entries="@array/preferences_scale_bar_unit_values"
			android:key="scaleBarUnit" android:defaultValue="@string/preferences_scale_bar_unit_default" android:dependency="showScaleBar" />
		<ListPreference android:title="@string/preferences_text_scale" android:summary="@string/preferences_text_scale_desc"
			android:entryValues="@array/preferences_text_scale_keys" android:entries="@array/preferences_text_scale_values"
			android:key="textScale" android:defaultValue="@string/preferences_text_scale_default" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_general">
		<CheckBoxPreference android:title="@string/preferences_fullscreen" android:summary="@string/preferences_fullscreen_desc"
			android:key="fullscreen" />
		<CheckBoxPreference android:title="@string/preferences_wake_lock" android:summary="@string/preferences_wake_lock_desc"
			android:key="wakeLock" />
		<CheckBoxPreference android:title="@string/preferences_cache_persistence" android:summary="@string/preferences_cache_persistence_desc"
			android:key="cachePersistence" />
		<org.mapsforge.applications.android.advancedmapviewer.preferences.CacheSizePreference
			android:title="@string/preferences_cache_size" android:summary="@string/preferences_cache_size_desc" android:key="cacheSize" />
		<org.mapsforge.applications.android.advancedmapviewer.preferences.MoveSpeedPreference
			android:title="@string/preferences_move_speed" android:summary="@string/preferences_move_speed_desc" android:key="moveSpeed" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_debug">
		<CheckBoxPreference android:title="@string/preferences_show_fps_counter" android:summary="@string/preferences_show_fps_counter_desc"
			android:key="showFpsCounter" />
		<CheckBoxPreference android:title="@string/preferences_show_tile_frames" android:summary="@string/preferences_show_tile_frames_desc"
			android:key="drawTileFrames" />
		<CheckBoxPreference android:title="@string/preferences_show_tile_coordinates" android:summary="@string/preferences_show_tile_coordinates_desc"
			android:key="drawTileCoordinates" />
		<CheckBoxPreference android:title="@string/preferences_show_water_tiles" android:summary="@string/preferences_show_water_tiles_desc"
			android:key="highlightWaterTiles" />
	</PreferenceCategory>
</PreferenceScreen>